<resources>
    <string name="app_name">AppSettings</string>

    <!-- string resources for settings preferences-->

    <string name="sync_pref">Sync</string>

    <string name="sync_pref_summary">Get your photos, videos, contacts, subscriptions etc on all your devices. </string>

    <string name="pref_syncConnectionType">Sync Connection Type</string>

    <string name="pref_syncConnectionType_dialog_title">Perform Sync Using</string>

    <string name="pref_syncConnectionType_default_value">WiFi</string>

    <string name="pref_syncConnectionType_summary">WiFi</string>

    <string-array name="pref_syncConnectionType_entries">

        <item>WiFi</item>

        <item>Mobile Data</item>

        <item>WiFi/Mobile Data</item>

    </string-array>

    <string-array name="pref_syncConnectionType_values">

        <item>WiFi</item>

        <item>Mobile</item>

        <item>WiFi_Mobile</item>

    </string-array>

    <!-- string resources for settings group preferences-->

    <string name="storage_group_title">STORAGE</string>

    <string name="text_message_group_title">TEXT (SMS) MESSAGES</string>

    <string name="text_multimedia_message_group_title">MULTIMEDIA (MMS) MESSAGES</string>

    <string name="delete_message_title">Delete old messages</string>

    <string name="delete_message_summary">Delete old messages as limits are reached</string>

    <string name="text_message_limit_title">Text message limit</string>

    <string name="text_message_limit_summary">200 messages per conversation</string>

    <string name="multimedia_message_limit_title">Multimedia message limit</string>

    <string name="multimedia_message_limit_summary">150 messages per conversation</string>

    <string name="delivery_report_title">Delivery reports</string>

    <string name="delivery_reports_summary">Request a delivery report for each message you send</string>

    <string name="sim_card_message__title">Manage SIM card messages</string>

    <string name="sim_card_message__summary">Manage messages stored on your SIM card</string>

    <!-- string resources for settings sub-screen preferences-->

    <string name="ringtone_title_group">RINGTONE</string>

    <string name="other_call_settings_title_group">OTHER CALL SETTINGS</string>

    <string name="voice_mail_title">VoiceMail</string>

    <string name="dial_pad_touch_tones">Dial pad touch tones</string>

    <string name="vibrate_ringing_title">Vibrate when ringing</string>

    <string name="phone_ringtone_title">Phone ringtone</string>

    <string name="service_title">Services</string>

    <string name="service_summary">Google Voice</string>

    <string name="setup_title">Setup</string>

    <string name="ringtone_title">Ringtone</string>

    <string name="vibrate_title">Vibrate</string>

    <string name="vibrate_summary">Always</string>

    <!-- string resources for settings default values preferences-->

    <string-array name="message_limit_entries">

        <item>150 Messages/Conversations</item>

        <item>300 Messages/Conversations</item>

        <item>500 Messages/Conversations</item>

    </string-array>

    <string-array name="message_limit_values">

        <item>150</item>

        <item>300</item>

        <item>500</item>

    </string-array>

    <string name="limit_default_value">500</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>